--- a/hw3/scss/homePage.scss
+++ b/hw3/scss/homePage.scss
@@ -10,10 +10,21 @@
     display: flex;
     align-items: center;
 
-    h3 {
-        color: white;
-        font-weight: 600;
-        width: 30%;
-        margin-left: 50px;
+    .hero {
+
+        margin-left: 40px;
+
+        h2 {
+            color: white;
+            font-weight: 800;
+            width: 30%;
+            margin-bottom: 30px;
+        }
+    
+        p {
+            color: white;
+            font-weight: 400;
+            width: 20%;
+        }
     }
 }
