Needs fonts and fixed footer

--- a/hw6/scss/components.scss
+++ b/hw6/scss/components.scss
@@ -1,6 +1,9 @@
 #navHolder {
+  max-width: $site-width;
+  margin: 0 auto;
   height: 100px;
   padding: 0 20px;
+  z-index: 99;
 
   position: absolute;
   top: 0;
@@ -37,6 +40,7 @@
       background-color: $site-yellow;
       border: 2px solid $site-yellow;
       border-radius: 20px;
+      filter: drop-shadow(0 10px rgba(0,0,0, 0.8));
 
       a {
         text-align: center;
@@ -66,9 +70,13 @@
     left: 0;
     height: calc(100vh - 100px);
     width: 100%;
+    background-color: $site-pink;
 
     li {
       margin-bottom: 10px;
+      padding: 40px;
+      border-bottom: 2px solid black;
+      border-radius: 20px;
     }
   }
 
@@ -100,6 +108,84 @@ li:hover {
   }
 }
 
+.footer {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  height: 70px;
+  max-width: $site-width;
+  margin: 0 auto;
+  padding: 0 20px;
+
+  z-index: 99;
+
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+
+  .mobileFooter {
+    display: none;
+  }
+
+  #mobileLinks, #smallLinks {
+    display: none;
+  }
+
+
+  .links {
+    width: 50%;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+
+    a {
+      text-decoration: none;
+      color: black;
+      font-size: 15px;
+      font-style: italic;
+    }
+
+  }
+
+
+}
+
+
+.copy {
+  font-style: italic;
+  font-size: 15px;
+}
+
+.socials {
+  width: 10%;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+
+  a {
+    img {
+      width: 20px;
+      height: 20px;
+    }
+  }
+}
+
+@media (max-width: 1050px) {
+  .footer {
+    .links {
+      width: 500px;
+    }
+  }
+  .socials {
+    width: 60px;
+
+    a {
+      margin-left: 5px;
+    }
+  }
+}
+
 @media (max-width: $tablet-width) {
   nav {
     display: none;
@@ -108,6 +194,90 @@ li:hover {
   #navHolder {
     .hamburger {
       display: block;
+    }
+  }
+
+  .footer {
+    .links {
+      width: 400px;
+      
+      a {
+        font-size: 10px;
+      }
+    }
+  }
+  .copy {
+    font-size: 10px;
+  }
+}
+
+@media (max-width: 550px) {
+  .footer {
+    .links {
+      width: 350px;
+
+      a {
+        font-size: 9px;
+      }
+    }
+  }
+  .copy {
+    font-size: 9px;
+  }
+}
+
+@media (max-width: $phone-width) {
+  .footer {
+    height: 80px;
+    display: block;
+    
+    .mobileFooter {
+      width: 100%;
+      margin: 0 auto 16px auto;
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+
+      .copy {
+        display: inline;
+      }
+
+      .socials {
+        display: flex;
+      }
+    }
+
+    .mobileLinks {
+      width: 100%;
+      margin-bottom: 10px;
+      
+    
+      a {
+        font-size: 10px;
+        margin-right: 10px;
+      }
+    }
+
+    #mobileLinks {
+      display: flex;
+    }
+
+    #smallLinks {
+      display: flex;
+      width: 50%;
+      margin: 0 auto;
+    }
+
+    .copy {
+      display: none;
+    }
+
+    .desktopLinks {
+      display: none;
+    }
+
+    .socials {
+      display: none;
     }
   }
 }
