--- a/hw6/scss/loginPage.scss
+++ b/hw6/scss/loginPage.scss
@@ -67,7 +67,23 @@
 
 @media (max-width: $tablet-width) {
     .loginPage {
-        height: 1000px;
         flex-direction: column;
+        padding-bottom: 170px;
+
+        .loginSection {
+            height: 160px;
+        }
+        .signUpSection {
+            height: 180px;
+        }
+
+        h1 {
+            margin-bottom: 30px;
+        }
+
+        input {
+            margin-bottom: 30px;
+        }
+        
     }
 }
